# LungNoduleSegmentation

./: CMakeLists.txt  CMakeLists.txt~
LungFissureSegmentationCLI/: CMakeLists.txt  LungFissureSegmentationCLI.cxx  LungFissureSegmentationCLI.xml
LungFissureSegmentationCLI/include/: itkConditionalBinaryDilateImageFilter.h~  itkEnhanceImageFilter.h  itkEnhanceImageFilter.txx  itkFissuresEigenValueFunctor.h  itkFissuresEigenValueFunctor.h~  itkFissuresEigenVectorFunctor.h~  itkGaussianEnhancementImageFilter.h  itkGaussianEnhancementImageFilter.hxx  itkGaussianEnhancementImageFilter.hxx~  itkGaussianEnhancementImageFilter.h~  itkGeneralEigenValueFunctor.h~  itkMultiScaleGaussianEnhancementImageFilter.h  itkMultiScaleGaussianEnhancementImageFilter.hxx  itkMultiScaleGaussianEnhancementImageFilter.hxx~  itkUnaryFunctorImageFilter2.hxx
LungLobeSegmentationCLI/: CMakeLists.txt  LungLobeSegmentationCLI.cxx  LungLobeSegmentationCLI.xml
LungLobeSegmentationCLI/include/: cipLabelMapToLungLobeLabelMapImageFilter.h  cipLabelMapToLungLobeLabelMapImageFilter.txx  (+2 more)
LungNoduleSegmentation/: Bronchoscopy.py~  CMakeLists.txt  CMakeLists.txt~  LungNoduleSegmentation.py  LungNoduleSegmentation.py~  LungSegmentation.py~
LungNoduleSegmentationCLI/: CMakeLists.txt  CMakeLists.txt~  LungLabelExtraction.cxx~  LungLabelExtraction.xml~  LungNoduleSegmentationCLI.cxx  LungNoduleSegmentationCLI.cxx~  LungNoduleSegmentationCLI.xml  LungNoduleSegmentationCLI.xml~
LungSegmentationCLI/: CMakeLists.txt  LungSegmentationCLI.cxx  LungSegmentationCLI.xml  cipChestConventions.h
(+11 files in other folders)
